--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "lint": "biome lint",
+    "format": "biome format",
+    "check": "biome check --write"
   },
   "dependencies": {
     "@react-router/node": "^7.9.2",
@@ -17,6 +20,7 @@
     "react-router": "^7.9.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.4",
     "@react-router/dev": "^7.9.2",
     "@tailwindcss/vite": "^4.1.13",
     "@types/node": "^22",
