--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rectrouter7",
+  "name": "reactrouter7-biome",
   "private": true,
   "type": "module",
   "scripts": {
@@ -9,26 +9,27 @@
     "typecheck": "react-router typegen && tsc",
     "lint": "biome lint",
     "format": "biome format",
-    "check": "biome check --write"
+    "check": "biome check"
   },
   "dependencies": {
-    "@react-router/node": "^7.9.2",
-    "@react-router/serve": "^7.9.2",
-    "isbot": "^5.1.31",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-router": "^7.9.2"
+    "@react-router/node": "^7.9.5",
+    "@react-router/serve": "^7.9.5",
+    "isbot": "^5.1.32",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router": "^7.9.5"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.4",
-    "@react-router/dev": "^7.9.2",
-    "@tailwindcss/vite": "^4.1.13",
-    "@types/node": "^22",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "tailwindcss": "^4.1.13",
-    "typescript": "^5.9.2",
-    "vite": "^7.1.7",
+    "@react-router/dev": "^7.9.5",
+    "@tailwindcss/vite": "^4.1.17",
+    "@types/node": "^24",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5.9.3",
+    "vite": "^7.2.2",
     "vite-tsconfig-paths": "^5.1.4"
-  }
+  },
+  "packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd"
 }
