--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-router/node": "^7.9.5",
     "@react-router/serve": "^7.9.5",
     "isbot": "^5.1.32",
+    "lucide-react": "^0.553.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router": "^7.9.5"
