--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@ out
 .env.test.local
 .env.production.local
 .env*.local
+.env.*.local
+.env.keys
+
 
 # Cache directories
 .cache
@@ -101,6 +104,17 @@ storybook-static
 
 # Lock files (optional - keep for reproducible builds)
 # Uncomment to ignore lock files in personal projects
-# pnpm-lock.yaml
-# yarn.lock
-# package-lock.json
+pnpm-lock.yaml
+yarn.lock
+package-lock.json
+
+# Python-generated files
+__pycache__/
+*.py[oc]
+build/
+dist/
+wheels/
+*.egg-info
+
+# Virtual environments
+.venv
